# degital-terrain-modelling

./: .gitignore  Croppinglazfile.py  Intensity.py  IntensityLINEARSCALING.py  README.md  ground filtering tests.py  intensityFLATRANGE.py  intensityZSCORE.py  makefile  profile  pyproject.toml  random test file.py  requirements.dev.txt  requirements.txt  tin.py  vegetation_output.las  vegetation_output35.las
code/: benchmark.py  config.py  geojson.py  gftin.py  main.py  pipeline.py  preprocess.py  step3.py  step4.py  step5.py  tin.py  vegetation_ext.py
code/intensity/: intensityFLATRANGE.py  intensityZSCORE.py
data/: dtm.tiff  step4.tiff
py/: benchmark.py  config.py  geojson.py  gftin.py  io.py  lasinfo.py  main.py  optimizer.py  pipeline.py  point_cloud.py  preprocess.py  ptio.py  step3.py  step4.py  step5.py  test.py  tin.py  vegetation_ext.py
report/Assignment 4 report/: main.tex
report/Assignment 4 report/References/: references.bib
