[tool.poetry]
name = "geo1015-ass4-team-bbq"
version = "0.1.0"
description = ""
authors = ["HideBa <baba.papa1120.ba@gmail.com>"]
readme = "README.md"
packages = [{include = "geo1015_ass4_team_bbq"}]

[tool.poetry.dependencies]
python = "^3.11"
laspy = "^2.5.1"
numpy = "^1.26.2"
rasterio = "^1.3.9"
startinpy = "^0.10.2"
pdal = "^3.2.3"
pyproj = "^3.6.1"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
